feat: add productionMultiplier and apply it to production amount